--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - SERVER_HOST=${SERVER_HOST:-0.0.0.0}
       - ADMIN_SERVER_PORT=${ADMIN_SERVER_PORT:-9011}
       - DEFAULT_ADMIN_USER=Kshitij Pandey
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - M_KEY=${M_KEY}
     restart: unless-stopped
     networks:
